tests/ui/diagnostic_namespace/on_type_error/on-type-error-duplicate-attributes.stderr
error[E0308]: mismatched types
  --> $DIR/on-type-error-duplicate-attributes.rs:12:21
   |
LL |     let _: S<i32> = k;
   |            ------   ^ expected `S<i32>`, found `K<{integer}>`
   |            |
   |            expected due to this
   |
   = note: custom on_type_error note: test coalesce first
   = note: custom on_type_error note: test coalesce second
   = note: expected struct `S<i32>`
              found struct `K<{integer}>`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
